--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <a href="features.html" class="cta-button">Lihat Fitur</a>
     </div>
     <div class="hero-img">
-      <img src="smartpeople.jpg" alt="Ilustrasi EduSmart">
+      <img src="smartpeople.jpg" alt="Ilustrasi SMARTPEOPLE">
     </div>
   </section>
 
